<resources>
    <string name="app_name">driversconnect</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="title_activity_drivers">Drivers</string>
    <string name="type">Type</string>
    <string name="dimension">Dimension</string>
    <string name="plate_number">Plate Number</string>
    <string name="current_location">Current Location</string>
    <string name="trailer_information">Trailer Information</string>
    <string name="login_warning">Please complete the required fields</string>
</resources>